# omnia

./: .gitmodules  CMakeLists.txt  CMakeSources.cmake  README.md  ReadMe.md
Source/: Omnia.cpp  Omnia.h  Settings.h.in
Source/Omnia/: Application.cpp  Application.h  Config.cpp  Config.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Omnia.pch  Platform.h  Types.h
Source/Omnia/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h
Source/Omnia/Debug/: Instrumentor.h  Memory.h
Source/Omnia/GFX/: Context.cpp  Context.h  Graphics.h
Source/Omnia/Graphics/: Context.cpp  Context.h  Graphics.h
Source/Omnia/System/: Cli.h  FSO.h  FileSystem.h  Input.cpp
Source/Omnia/UI/: Dialog.h  Event.cpp  Event.h  EventData.h  GuiBuilder.cpp  GuiBuilder.h  GuiLayer.cpp  GuiLayer.h  Input.cpp  Input.h  Window.cpp  Window.h  WindowData.h
Source/Omnia/UI/Style/: MaterialDesign.h  Styles.h
Source/Omnia/Utility/: DateTime.h  Enum.h  Message.h  Property.h  Random.h  String.h  ThreadPool.h  Timer.h  TimerOptimized.h  UUID.h
Source/Platform/GFX/OpenGL/: GLContext.cpp  GLContext.h  OpenGL.cpp  OpenGL.h
Source/Platform/GFX/Vulkan/: VKContext.cpp  VKContext.h  VKDevice.cpp  VKDevice.h  VKInstance.cpp  VKInstance.h  VKSwapChain.cpp  VKSwapChain.h  Vulkan.h
Source/Platform/Graphics/OpenGL/: GLContext.h  GLGuiRenderer.cpp  OpenGL.cpp  OpenGL.h
Source/Platform/UI/WinAPI/: WinDialog.cpp  WinDialog.h  WinEvent.cpp  WinEvent.h  WinGuiApi.cpp  WinInput.cpp  WinInput.h  WinWindow.cpp  WinWindow.h
